[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"


[project]
name = "doit"
version = "0.37.dev0"
description = "doit - Automation Tool"
license = {text = "MIT"}
readme = "pypi_long_description.rst"
requires-python = ">=3.8"
authors = [
    {name = "Eduardo Naufel Schettino", email = "schettino72@gmail.com"},
]
keywords = ["build", "make", "task", "automation", "pipeline", "task-runner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]
dependencies = ["importlib-metadata>=4.4"]

[project.urls]
Homepage = "https://pydoit.org"
Documentation = "https://pydoit.org/"
Source = "https://github.com/pydoit/doit/"
Tracker = "https://github.com/pydoit/doit/issues"

[project.scripts]
doit = "doit.__main__:main"

[project.optional-dependencies]
toml = ["tomli; python_version < '3.11'"]
cloudpickle = ["cloudpickle; platform_python_implementation != 'PyPy'"]


[tool.setuptools]
packages = ["doit"]
